--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,6 +66,8 @@ jobs:
           aws lambda update-function-configuration \
             --function-name fairstay-mvp-backend \
             --environment Variables="{\
+              S3_BUCKET_NAME=${{ secrets.S3_BUCKET_NAME }},\
+              AI_SERVER_URL=${{ secrets.AI_SERVER_URL }},\
               DYNAMODB_SESSIONS_TABLE=fairstay-mvp-dynamo_sessions,\
               DYNAMODB_IMAGES_TABLE=fairstay-mvp-dynamo_images,\
               DYNAMODB_SURVEY_TABLE=fairstay-mvp-dynamo_survey_responses\
